[package]
name = "sbd_lib"
version = "0.2.0"
authors = ["Ilya Averyanov <averyanovin@gmail.com>", "Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2018"
description = "Rust library for parsing iridium sbd message"
keywords = ["iridium", "sbd"]
license = "MIT"
homepage = "https://gitlab.com/a1ien/sbd_lib"
repository = "https://gitlab.com/a1ien/sbd_lib.git"

[dependencies]
chrono = "0.4"
failure = "0.1"
byteorder = "1.3"
