[package]
name = "sbd_lib"
version = "0.3.0"
authors = ["Ilya Averyanov <averyanovin@gmail.com>", "Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2018"
description = "Rust library for parsing iridium sbd message"
keywords = ["iridium", "sbd"]
license = "MIT"
homepage = "https://gitlab.com/a1ien/sbd_lib"
repository = "https://gitlab.com/a1ien/sbd_lib.git"

[features]
serde-derive = ["time/serde", "serde"]

[dependencies]
time = "0.3"
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"], optional = true }
